[package]
name = "kambo-hive-host"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
rayon = "1.10.0"
rand = "0.8.5"
kambo-hive = { git = "https://github.com/hscHeric/kambo-hive" }
